# nornir-3.0-routing-automation

./: .gitignore  README.md  config-topo2.yaml  config.yaml  pyproject.toml  requirements.txt
inventory/: cisco.ios  hosts.yaml
inventory/topo1/: defaults.yaml  groups.yaml  hosts.yaml
inventory/topo2/: groups.yaml  hosts.yaml
scripts/: first_tutorial.py  third_tutorial_scrapli.py
scripts/topo1/: ospf_configure.py
scripts/topo2/: configure_interfaces-ospf-eigrp-rip-redistribute.py  configure_interfaces.py
