[tool.poetry]
name = "nornir-3.0-ospf-bgp"
version = "0.1.0"
description = "Automo\bate OSPF and BGF\bP g\bwith nornir 3.0"
authors = ["kimdoanh89 <kimdoanh89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3.0.0"
nornir_utils = "^0.1.0"
nornir_netmiko = "^0.1.1"
scrapli = "^2020.8.28"
nornir_jinja2 = "^0.1.0"

[tool.poetry.dev-dependencies]
bpython = "^0.19"
pdbpp = "^0.10.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
